// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<label
  className="root    rootLayoutVertical   rootSizeMedium  rootVariantOutline"
>
  <div
    className="label "
  >
    label
  </div>
  <div
    className="field"
  >
    <div
      className="inputContainer"
    >
      <input
        className="input"
        disabled={false}
        onChange={null}
        placeholder={null}
        required={false}
        size={null}
        type="text"
      />
    </div>
  </div>
</label>
`;

exports[`rendering renders correctly the number input type 1`] = `
<label
  className="root    rootLayoutVertical   rootSizeMedium  rootVariantOutline"
>
  <div
    className="label "
  >
    Number input type
  </div>
  <div
    className="field"
  >
    <div
      className="inputContainer"
    >
      <input
        className="input"
        disabled={false}
        onChange={null}
        placeholder={null}
        required={false}
        size={null}
        type="number"
      />
    </div>
  </div>
</label>
`;

exports[`rendering renders correctly the number input type with small input 1`] = `
<label
  className="root  hasRootSmallInput  rootLayoutVertical   rootSizeMedium  rootVariantOutline"
  style={
    Object {
      "--rui-custom-input-size": 1,
    }
  }
>
  <div
    className="label "
  >
    Number input type
  </div>
  <div
    className="field"
  >
    <div
      className="inputContainer"
    >
      <input
        className="input"
        disabled={false}
        onChange={null}
        placeholder={null}
        required={false}
        size={null}
        type="number"
      />
    </div>
  </div>
</label>
`;

exports[`rendering renders correctly with all props 1`] = `
<label
  className="root isRootFullWidth  isRootInFormLayout rootLayoutHorizontal isRootDisabled isRootRequired rootSizeLarge isRootStateInvalid rootVariantFilled"
  htmlFor="test"
  id="test__label"
  style={
    Object {
      "--rui-custom-input-size": 20,
    }
  }
>
  <div
    className="label isLabelHidden"
    id="test__labelText"
  >
    All props
  </div>
  <div
    className="field"
  >
    <div
      className="inputContainer"
    >
      <input
        className="input"
        disabled={true}
        id="test"
        onChange={null}
        placeholder="placeholder"
        required={true}
        size={20}
        type="email"
        value="value"
      />
      <div
        className="bottomLine"
      />
    </div>
    <div
      className="helpText"
      id="test__helpText"
    >
      some help
    </div>
    <div
      className="validationText"
      id="test__validationText"
    >
      some error
    </div>
  </div>
</label>
`;

exports[`rendering renders correctly with custom props 1`] = `
<label
  className="root    rootLayoutVertical   rootSizeMedium  rootVariantOutline"
>
  <div
    className="label "
  >
    With custom props
  </div>
  <div
    className="field"
  >
    <div
      className="inputContainer"
    >
      <input
        autoCapitalize="off"
        autoComplete="off"
        className="input"
        disabled={false}
        onChange={null}
        placeholder={null}
        required={false}
        size={null}
        type="text"
      />
    </div>
  </div>
</label>
`;

exports[`rendering renders correctly with hidden label 1`] = `
<label
  className="root    rootLayoutVertical   rootSizeMedium  rootVariantOutline"
>
  <div
    className="label isLabelHidden"
  >
    With hidden label
  </div>
  <div
    className="field"
  >
    <div
      className="inputContainer"
    >
      <input
        className="input"
        disabled={false}
        onChange={null}
        placeholder={null}
        required={false}
        size={null}
        type="text"
      />
    </div>
  </div>
</label>
`;

exports[`rendering renders correctly with small input 1`] = `
<label
  className="root  hasRootSmallInput  rootLayoutVertical   rootSizeMedium  rootVariantOutline"
  style={
    Object {
      "--rui-custom-input-size": 5,
    }
  }
>
  <div
    className="label "
  >
    Small input
  </div>
  <div
    className="field"
  >
    <div
      className="inputContainer"
    >
      <input
        className="input"
        disabled={false}
        onChange={null}
        placeholder={null}
        required={false}
        size={5}
        type="text"
      />
    </div>
  </div>
</label>
`;
